--- a/MyMPaginaInfo/Views/Home/Index.cshtml
+++ b/MyMPaginaInfo/Views/Home/Index.cshtml
@@ -1,6 +1,33 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<nav class="navbar navbar-default navbar-fixed-top" style="background-color:#0099CC;border-color:#0099CC;color:white;">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" style="color:white;" href="#">@DateTime.Now.ToLongDateString()</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle"  style="color:white;" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-gear"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#"><i class="fa fa-key"></i> Ingresa tu llave!!</a></li>
+                        <li><a href="#"><i class="fa fa-phone"></i> Contacto</a></li>
+                        <li><a href="#"><i class="fa fa-info-circle"></i> Aviso de privacidad</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#"><i class="fa fa-credit-card"></i> Registrate!!</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div>
+</nav>
 <div class="container-fluid" style="margin-top: 50px;">
     <div class="h2" style="color:white;text-align:center;">
         <div class="row">
@@ -52,5 +79,15 @@
         </div>
     </div>
 </section>
-<section class="section-lightBlue"></section>
-<section class="section-white"></section>
+<section class="section-lightBlue">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12 col-md-4">
+
+            </div>
+            <div class="col-sm-12 col-md-4"></div>
+            <div class="col-sm-12 col-md-4"></div>
+        </div>
+    </div>
+</section>
+<section class="section-flowers"></section>
