se realizan avances a la vista index de la página informativa

--- a/MyMPaginaInfo/Views/Home/Index.cshtml
+++ b/MyMPaginaInfo/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "MyM Inicio";
 }
 <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#0099CC;border-color:#0099CC;color:white;">
     <div class="container-fluid">
@@ -83,10 +83,82 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-4">
-
+                <div class="thumbnail">
+                    <i class="fa fa-industry fa-5x" style="color:#6adaff;"></i>
+                    <div class="caption">
+                        <h3>Sistemas Empresariales</h3>
+                        <p>
+                            tenemos soluciones para elaborar aplicaciones
+                            empresariales a medida. Con tecnologías de cualquier
+                            tipo.
+                        </p>
+                        <ul class="list-group">
+                            <li class="list-group-item">Patrones de diseño</li>
+                            <li class="list-group-item">Arquitectura Orientada en Servicios <strong>SOA</strong></li>
+                            <li class="list-group-item">Metodologías para el desarrollo de software orientada a Empresas</li>
+                            <li class="list-group-item">Estándares en el análisis, desarrollo, implementación y pruebas</li>
+                        </ul>
+                        <p>
+                            Las soluciones que se propongan, siempre serán las que se ajusten a la empresa. No se imponen soluciones
+                            y mucho menos se condicionan a los clientes. Sin embargo, tampoco prometemos lo que no podemos. Es por ello
+                            que nosotros le dedicamos mucho al análisis de sus requerimientos para poder dar los resultados esperados.
+                        </p>
+                        <button type="button" class="btn btn-primary btn-block"><i class="fa fa-info-circle"></i> más información</button>
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-12 col-md-4"></div>
-            <div class="col-sm-12 col-md-4"></div>
+            <div class="col-sm-12 col-md-4">
+                <div class="thumbnail">
+                    <i class="fa fa-building fa-5x" style="color:#6adaff;"></i>
+                    <div class="caption">
+                        <h3>Sistemas para PyMEs</h3>
+                        <p>
+                            tenemos soluciones para elaborar aplicaciones
+                            para que empieces tu propio negocio
+                        </p>
+                        <ul class="list-group">
+                            <li class="list-group-item">Open Source</li>
+                            <li class="list-group-item">Presupuestos ajustables a lo que necesitas</li>
+                            <li class="list-group-item">Te ayudamos a guiarte en los caminos de las TIC's</li>
+                            <li class="list-group-item">Asesoría para que juntos consigamos la mejor opción para tu negocio</li>
+                        </ul>
+                        <p>
+                            No inviertas mucho en el uso de herramientas que ya existen pero que son difíciles de usar, nosotros 
+                            te ayudamos a tomar la mejor solución para tu primer negocio o empresa. Además, los productos que te 
+                            ofrezcamos, contará con asesoría y soporte para que siempre cuentes con el apoyo de expertos.
+                        </p>
+                        <br />
+                        <br />
+                        <button type="button" class="btn btn-primary btn-block"><i class="fa fa-info-circle"></i> más información</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <div class="thumbnail">
+                    <i class="fa fa-home fa-5x" style="color:#6adaff;"></i>
+                    <div class="caption">
+                        <h3>Sistemas Personales</h3>
+                        <p>
+                            ¿Alguna aplicación que requieras para uso personal?
+                        </p>
+                        <ul class="list-group">
+                            <li class="list-group-item">Gestores de información</li>
+                            <li class="list-group-item">Interfaces privadas y personalizadas</li>
+                            <li class="list-group-item">Integración con plataformas o sistemas operativos actuales</li>
+                            <li class="list-group-item">Asesoría y soprote técnico</li>
+                        </ul>
+                        <p>
+                            Te ayudamos a desarrollar esa idea que tengas en mente, con las mejores herramientas y costos accesibles.
+                            Además, te ofrecemos mejoras y opciones de extensibilidad con planes accesibles.
+                        </p>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <button type="button" class="btn btn-primary btn-block"><i class="fa fa-info-circle"></i> más información</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
