--- a/MyMPaginaInfo/Content/mym-style.css
+++ b/MyMPaginaInfo/Content/mym-style.css
@@ -35,6 +35,7 @@ body{
 section{
     height:100vh;
     display:block;
+
 }
 
 .section-desktopimg{
@@ -57,6 +58,7 @@ section{
 }
 
 .section-lightBlue{
+    padding-top:60px;
     background-color: #6adaff;
     color:#004782;
 }
